--- a/Assets/gunggme.asmdef
+++ b/Assets/gunggme.asmdef
@@ -5,7 +5,8 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:831409e8f9d13b5479a3baef9822ad34",
         "GUID:57c32fc907df0f54e8e6e8f0d2488336",
-        "GUID:08a110bd598f7604f9519c2d7e1fb3cc"
+        "GUID:08a110bd598f7604f9519c2d7e1fb3cc",
+        "GUID:be82ca89a4fba6b41abe7f72e661d691"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
